# ytdrop

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-17-ytdrop.md
docs/superpowers/specs/: 2026-04-17-ytdrop-design.md
scripts/: fetch-binaries.mjs
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  model.rs  parse.rs  queue.rs  settings.rs  ytdlp.rs
src/components/: DownloadItem.tsx  HistoryList.tsx  QueueList.tsx  SettingsDialog.tsx  UrlInput.tsx
